<resources>
    <string name="app_name">El Escalon</string>
    <string name="title_home">Comunidades</string>
    <string name="title_dashboard">Nueva Comunidad</string>
    <string name="title_notifications">Perfil</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_activity_ini_comunidad">iniComunidad</string>
    <string name="title_activity_perfil_vecino">PerfilVecino</string>
    <string name="title_activity_">PerfilVecino</string>
    <string name="title_foro">Foro</string>
    <string name="title_Participantes">Participantes</string>
    <string name="noDireccion">Sin direccion</string>
    <string name="valorString">valoraciones</string>
    <string name="SobreMi">Sobre mi:</string>
    <string name="busqueda">Buscar</string>
    <string name="mensaje">Escribir mensaje</string>
    <string name="nombre">Nombre</string>
    <string name="nombre2">Nombre :</string>
    <string name="correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Login">Login</string>
    <string name="aviso">¿No tienes cuenta? Registrate</string>
    <string name="titulo">Titulo</string>
    <string name="Mensaje">Mensaje</string>
    <string name="Responder">Responder</string>
    <string name="Edad">Edad :</string>
    <string name="Comunidades">Comunidades :</string>
    <string name="Calle">Calle :</string>
    <string name="correoE">Correo electronico :</string>
    <string name="Contraseña2">Contraseña :</string>
    <string name="nyp">Nombre y Apellido</string>
    <string name="mail">Email</string>
    <string name="repContraseña">Repetir contraseña</string>
    <string name="reg">Registro</string>
    <string name="acep">ACEPTAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="Borrar">Borrar</string>
    <string name="Años"> años</string>
    <string name="Borrarm">Borrar mensaje</string>
    <string name="Borrarc">Borrar comunidad</string>
    <string name="Borrarcv">¿Desea borrar su conversacion con </string>
    <string name="espera">Su foto esta cargando, espere por favor</string>
    <string name="seisletras">La contraseña debe tener 6 caracteres</string>
    <string name="compcon">Compruebe la contraseña</string>
    <string name="compmail">Compruebe el email</string>
    <string name="valore">Valore a su vecino</string>
    <string name="compcamp">Compruebe que los campos no esten vacios</string>
    <string name="Borrarmf">¿Desea borrar su mensaje del foro?</string>
    <string name="Borrarcm">¿Desea borrar esta comunidad? </string>
    <string name="RegExito">Se ha registrado con exito</string>
    <string name="RegFallo">No se ha podido registrar</string>
    <string name="LogFallo">Usuario o contraseña incorrectos</string>
    <string name="AñadirC">Añadir comunidad</string>
    <string name="DesAñadc">¿Desea añadir  esta comunidad?</string>
    <string name="NuevaCom">Crear nueva comunidad</string>
    <string name="NuevaMen">Nuevo mensaje</string>
    <string name="Camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="Opcion">Elija una opción</string>
    <string name="pertenece">Ya pertenece a esta comunidad</string>
    <string name="nopertenece">Sin comunidad</string>

</resources>
